# gsrteam_Webrtc

./: CMakeLists.txt  Makefile  client.html  main.cpp  rstpserver.cpp  rtsp_server  socket.cpp  style.css
client/: clientjs.html
